--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "korean-text-matcher" # PyPI에 등록될 패키지 이름 (고유해야 함)
-version = "0.1.0"           # 패키지 버전
+name = "korean-text-matcher" 
+version = "0.1.0"           
 authors = [
-  { name="Kim Jeonhee", email="jeonhee.kim@powergen.ai" }, # 당신의 이름과 이메일로 변경하세요
+  { name="Kim Jeonhee", email="jeonhee.kim@powergen.ai" }, 
 ]
 description = "A Python package for phonetic Korean text matching with enhanced first-character weighting."
 readme = "README.md"
@@ -23,8 +23,8 @@ classifiers = [
 keywords = ["korean", "text matching", "similarity", "한글", "유사도", "phonetic"]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/korean-text-matcher" # (선택 사항) 당신의 GitHub 레포지토리 URL로 변경하세요
-"Bug Tracker" = "https://github.com/yourusername/korean-text-matcher/issues"
+Homepage = "https://github.com/powergen5067/korean-text-matcher"
+"Bug Tracker" = "https://github.com/powergen5067/korean-text-matcher/issues"
 
 [tool.setuptools.packages.find]
 where = ["."]
